tests/ui/eii/wrong_target.stderr
error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:6:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:8:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:12:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:14:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:20:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:22:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:26:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:28:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:31:5
   |
LL |     #[foo]
   |     ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:33:5
   |
LL |     #[eii]
   |     ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:38:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:40:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:43:5
   |
LL |     #[foo]
   |     ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:45:5
   |
LL |     #[eii]
   |     ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:50:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:52:1
   |
LL | #[eii]
   | ^^^^^^

error: `#[foo]` is only valid on functions
  --> $DIR/wrong_target.rs:55:5
   |
LL |     #[foo]
   |     ^^^^^^

error: `#[eii]` is only valid on functions
  --> $DIR/wrong_target.rs:57:5
   |
LL |     #[eii]
   |     ^^^^^^

error: aborting due to 18 previous errors

